test/sema/exercise/member_expr_non_struct_type.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

fn main(): unit {
  let x = 1.0;

  let y = x.x;
  // CHECK: [[# @LINE - 1 ]]:12: error: cannot access member of 'number'
}
